--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,15 @@ ul {
 li {
   margin: 0 1em;
 }
+section {
+  padding: 3em;
+}
+
+footer {
+  padding: 2em;
+  background: rgba(189, 189, 189, 0.342);
+  box-shadow: 0px -10px 20px rgba(189, 189, 189, 0.74);
+}
 
 .nav-header {
   padding: 8em;
@@ -33,20 +42,14 @@ li {
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.219);
 }
 .container {
-  border: 2px solid black;
+  /* border: 2px solid black; */
 }
 .nav-container {
-  border: 2px solid blue;
   display: flex;
   justify-content: space-evenly;
 }
 .header-container {
   padding: 5em;
-  border: 2px solid blue;
-}
-
-section {
-  padding: 3em;
 }
 
 .section-title {
@@ -62,14 +65,16 @@ section {
 .section-items {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  align-items: flex-start;
-}
-.menu-item {
-  width: 45%;
-  display: flex;
-  align-items: flex-start;
   justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.menu-item {
+  margin: 0.5em 0;
+  display: flex;
+  justify-content: space-between;
+  width: 45%;
   border-radius: 10px;
 }
 .photo {
