--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,21 @@ footer {
 .item-text {
   padding: 0.5em 0;
 }
+
+.section-menu-buttons {
+  margin-bottom: 2em;
+  display: flex;
+  justify-content: center;
+}
+
+.category-btn {
+  padding: 0.6em;
+  margin-right: 0.7em;
+  border-radius: 0.7em;
+  border: 1px solid rgb(0, 0, 0);
+  background: rgba(201, 199, 199, 0.418);
+}
+
+.category-btn:hover {
+  background: rgba(201, 199, 199, 0.199);
+}
