--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 * {
   margin: 0;
+  font-family: "Loto", sans-serif;
 }
 
 body {
-  background: rgba(209, 209, 209, 0.062);
+  background: rgba(177, 177, 177, 0.61);
+  font-size: 18px;
 }
 
 h1,
@@ -24,44 +26,134 @@ li {
 section {
   padding: 3em;
 }
+span {
+  font-family: "Lobster Two", cursive;
+  color: #4f7942;
+}
 
 footer {
   padding: 2em;
   background: rgba(189, 189, 189, 0.342);
   box-shadow: 0px -10px 20px rgba(189, 189, 189, 0.74);
 }
-
-.nav-header {
-  padding: 8em;
-  background-image: linear-gradient(
-      to bottom,
-      rgba(245, 246, 252, 0.363),
-      rgba(252, 252, 252, 0.678)
-    ),
-    url(./images/header.jpg);
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.219);
-}
 .container {
   /* border: 2px solid black; */
 }
-.nav-container {
-  display: flex;
-  justify-content: space-evenly;
-}
-.header-container {
+
+.nav-header {
   padding: 5em;
+  background-image: linear-gradient(
+      to top,
+      rgba(245, 246, 252, 0.048),
+      rgba(252, 252, 252, 0.096)
+    ),
+    url(./images/header2.jpg);
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.219);
+  background-size: cover;
 }
 
-.section-title {
+.nav-container {
+  background: rgb(255, 255, 255);
+  border: 1px solid rgba(230, 229, 229, 0.418);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0.5em 0;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.nav-logo h3 {
+  font-family: "Lobster Two", cursive;
+  font-size: 2.5rem;
+  text-transform: capitalize;
+  color: #4f7942;
+}
+
+.nav-list {
+  box-sizing: content-box;
+  text-transform: capitalize;
+  color: rgb(70, 70, 70);
+  font-weight: 300;
+}
+.nav-list li {
+  margin: 0;
+  display: block;
+  padding: 1em;
+  font-size: 1rem;
+}
+.nav-list li:hover {
+  background: rgba(201, 199, 199, 0.199);
+  color: rgb(156, 156, 156);
+  border-radius: 5px;
+}
+
+.nav-phone-number {
+  font-size: 0.7rem;
+  color: #4f7942;
+}
+
+.header-content {
+  max-width: 900px;
+  margin: 5.5em auto;
+  margin-bottom: 0;
+  padding: 5em;
   text-align: center;
 }
+.header-content-title {
+  font-family: "Lobster Two", cursive;
+  font-size: 5rem;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-shadow: 5px 1px #000000;
+}
+
+.header-content h2 {
+  font-family: "Dancing Script", cursive;
+  font-size: 2rem;
+  color: rgb(0, 0, 0);
+  text-shadow: 1px 1px #ffffff;
+
+  letter-spacing: 5px;
+}
+
+/* MENU */
+.section-title {
+  text-align: center;
+  font-size: 2rem;
+  text-transform: capitalize;
+}
+
 .underline {
   height: 1px;
   width: 200px;
   margin: 0.5em auto;
-  background: rgba(0, 0, 0, 0.199);
+  background: rgb(243, 242, 242);
 }
 
+/* BUTTONS */
+.section-menu-buttons {
+  margin-bottom: 2em;
+  display: flex;
+  justify-content: center;
+}
+
+.category-btn {
+  padding: 0.7em;
+  margin-right: 0.7em;
+  border-radius: 0.7em;
+  border: 1px solid rgb(243, 242, 242);
+  background: rgba(155, 155, 155, 0.418);
+  color: rgb(255, 255, 255);
+  text-transform: capitalize;
+}
+
+.category-btn:hover {
+  background: rgba(201, 199, 199, 0.199);
+}
+
+/* MENU ITEMS */
 .section-items {
   display: flex;
   flex-direction: row;
@@ -76,12 +168,17 @@ footer {
   justify-content: space-between;
   width: 45%;
   border-radius: 10px;
+  padding: 1em;
+  box-sizing: content-box;
+}
+.menu-item:hover {
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.219);
 }
 .photo {
   width: 40%;
   object-fit: cover;
   height: 150px;
-  border: 2px solid grey;
+  border: 2px solid rgb(243, 242, 242);
   border-radius: 10px;
 }
 .item-info {
@@ -91,26 +188,19 @@ footer {
   display: flex;
   justify-content: space-between;
   padding: 0.2em 0;
-  border-bottom: 1px dashed rgba(0, 0, 0, 0.233);
+  border-bottom: 1px solid rgb(243, 242, 242);
+  font-size: 1rem;
+  text-transform: capitalize;
+  font-weight: 700;
+  color: #4f7942;
+}
+
+.price {
+  color: black;
 }
 .item-text {
   padding: 0.5em 0;
-}
-
-.section-menu-buttons {
-  margin-bottom: 2em;
-  display: flex;
-  justify-content: center;
-}
-
-.category-btn {
-  padding: 0.6em;
-  margin-right: 0.7em;
-  border-radius: 0.7em;
-  border: 1px solid rgb(0, 0, 0);
-  background: rgba(201, 199, 199, 0.418);
-}
-
-.category-btn:hover {
-  background: rgba(201, 199, 199, 0.199);
+  color: rgb(255, 255, 255);
+  font-size: 0.9rem;
+  font-weight: 300;
 }
