--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,8 @@ span {
 
 footer {
   padding: 2em;
-  background: rgba(189, 189, 189, 0.342);
-  box-shadow: 0px -10px 20px rgba(189, 189, 189, 0.74);
+  background: #4f7942;
+  box-shadow: 0px -10px 10px #4f794242;
 }
 .container {
   border: 2px solid black;
@@ -74,18 +74,23 @@ footer {
 .nav-list {
   box-sizing: content-box;
   text-transform: capitalize;
-  color: rgb(70, 70, 70);
   font-weight: 300;
 }
 .nav-list li {
   margin: 0;
   display: block;
-  padding: 1em;
   font-size: 1rem;
 }
-.nav-list li:hover {
+
+.nav-list li a {
+  padding: 1em;
+  color: rgb(70, 70, 70);
+  text-decoration: none;
+}
+.nav-list li a:hover {
+  color: rgba(70, 70, 70, 0.452);
+  text-decoration: underline;
   background: rgba(201, 199, 199, 0.199);
-  color: rgb(156, 156, 156);
   border-radius: 5px;
 }
 
