--- a/styles.css
+++ b/styles.css
@@ -268,13 +268,42 @@ footer {
 /* MAP */
 .section-map iframe {
   width: 100%;
-  height: 450px;
+  height: 400px;
   border: 0;
-  load
+  margin-top: 1em;
 }
 
 /* FOOTER */
 .footer-img img {
+  max-width: 1000px;
+  width: 100%;
   display: block;
+  margin: 2.5em auto 0;
+}
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1000px;
+  align-items: flex-start;
   margin: 0 auto;
+}
+.contact-info-container {
+  width: 30%;
+}
+.reservation-container {
+  width: 40%;
+}
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  margin: 0;
+}
+.reservation-input {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+}
+.reservation-input input {
+  width: 70%;
 }
