--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ footer {
   font-weight: 300;
 }
 /* MAP */
-.section-map iframe {
+.section-map {
   width: 100%;
   height: 400px;
   border: 0;
